clean some code

--- a/pages/job.html
+++ b/pages/job.html
@@ -7,7 +7,7 @@
     <title>COFFEE - Work with us</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="..\img\icon.ico">
-    <link rel="stylesheet" type="text/css" media="screen" href="../style/background.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="../style/zBackground.css">
     <link rel="stylesheet" type="text/css" media="screen" href="../style/job.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../script/checkScreen.js"></script>
@@ -78,29 +78,18 @@
 
 
     </div>
-    <div id="footer">
-        <div id="one">
-            <ul id="footer_left">
-                <li><a href="main.html"> Home</a></li>
-                <li><a href="product.html"> Products</a> </li>
-                <li><a href="location.html"> Stores</a> </li>
-                <li><a href="job.html"> Jobs</a></li>
-                <li><a href="contact.html"> Contact us</a></li>
-            </ul>
-        </div>
-        <div id="footer_right">
-            <p id="followUs">follow us
-                <a href="https://www.facebook.com" target="_blank"><img class="logo" src="../img/logo/facebook.png"
-                        alt="Facebook"></a>
-                <a href="https://www.twitter.com" target="_blank"><img class="logo" src="../img/logo/twitter.png"
-                        alt="Twitter"></a>
-                <a href="https://www.instagram.com" target="_blank"><img class="logo" src="../img/logo/instagram.jpg"
-                        alt="Instagram"></a></p>
-        </div>
-
-        <div id="copyright">
-            <small> &#9400; Coffee ltd. 2019. All rights reserved</small>
-        </div>
+    <footer id="footer">
+		<div id="footer_right">
+			<p id="followUs">Follow us
+				<a href="https://www.facebook.com" target="_blank"><img class="logo" src="../img/logo/facebook.png" alt="Facebook"></a>
+				<a href="https://www.twitter.com" target="_blank"><img class="logo" src="../img/logo/twitter.png" alt="Twitter"></a>
+				<a href="https://www.instagram.com" target="_blank"><img class="logo" src="../img/logo/instagram.jpg" alt="Instagram"></a>
+			</p>
+		</div>
+		<div id="copyright">
+			<small>&#9400; Coffee ltd. 2019. All rights reserved</small>
+		</div>
+	</footer>
         <script>
             function show() {
                 document.getElementById("apply").style.visibility = "visible";
